--- a/pages/1849.html
+++ b/pages/1849.html
@@ -317,7 +317,8 @@ margin-left: 0em;
 
 <h4 id="string_theory">String theory</h4>
 
-<div class="hide"><ul>
+<div class="hide"><div>
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong></p>
 </li>
@@ -325,7 +326,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+about+string+theory">books about string theory</a></p>
 </li>
-</ul><h3 id="ingredients">Ingredients</h3><ul>
+</ul>
+
+<h3 id="ingredients">Ingredients</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a></p>
 </li>
@@ -345,7 +350,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>, <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>, <a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a></li>
 </ul>
 </li>
-</ul><h3 id="critical_string_models">Critical string models</h3><ul>
+</ul>
+
+<h3 id="critical_string_models">Critical string models</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/heterotic+string+theory">heterotic string theory</a></p>
 
@@ -425,7 +434,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Ho%C5%99ava-Witten+theory">Hořava-Witten theory</a></li>
 </ul>
 </li>
-</ul><h3 id="extended_objects">Extended objects</h3><ul>
+</ul>
+
+<h3 id="extended_objects">Extended objects</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/brane">brane</a></p>
 </li>
@@ -509,7 +522,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h3 id="topological_strings">Topological strings</h3><ul>
+</ul>
+
+<h3 id="topological_strings">Topological strings</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+string">topological string</a>, <a class="existingWikiWord" href="/nlab/show/TCFT">TCFT</a></p>
 
@@ -521,7 +538,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+M-theory">topological M-theory</a></p>
 </li>
-</ul><h2 id="backgrounds">Backgrounds</h2><ul>
+</ul>
+
+<h2 id="backgrounds">Backgrounds</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/target+space">target space</a>, <a class="existingWikiWord" href="/nlab/show/background+gauge+field">background gauge field</a></p>
 </li>
@@ -533,7 +554,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/landscape+of+string+theory+vacua">landscape of string theory vacua</a></p>
 </li>
-</ul><h2 id="phenomenology">Phenomenology</h2><ul>
+</ul>
+
+<h2 id="phenomenology">Phenomenology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a></p>
 
@@ -547,15 +572,21 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/string+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="differential_cohomology">Differential cohomology</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/differential+cohomology">differential cohomology</a></strong></p><h2 id="ingredients">Ingredients</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/differential+cohomology">differential cohomology</a></strong></p>
+
+<h2 id="ingredients">Ingredients</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></p>
 </li>
@@ -563,7 +594,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/differential+geometry">differential geometry</a></p>
 </li>
-</ul><h2 id="connections_on_bundles">Connections on bundles</h2><ul>
+</ul>
+
+<h2 id="connections_on_bundles">Connections on bundles</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/connection+on+a+bundle">connection on a bundle</a></p>
 
@@ -597,7 +632,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="higher_abelian_differential_cohomology">Higher abelian differential cohomology</h2><ul>
+</ul>
+
+<h2 id="higher_abelian_differential_cohomology">Higher abelian differential cohomology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/differential+function+complex">differential function complex</a></p>
 </li>
@@ -643,7 +682,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/differential+cobordism+cohomology">differential cobordism cohomology</a></p>
 </li>
-</ul><h2 id="higher_nonabelian_differential_cohomology">Higher nonabelian differential cohomology</h2><ul>
+</ul>
+
+<h2 id="higher_nonabelian_differential_cohomology">Higher nonabelian differential cohomology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/principal+2-bundle">principal 2-bundle</a>, <a class="existingWikiWord" href="/nlab/show/principal+%E2%88%9E-bundle">principal ∞-bundle</a></p>
 </li>
@@ -663,7 +706,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-Chern-Simons+theory">∞-Chern-Simons theory</a></p>
 </li>
-</ul><h2 id="fiber_integration">Fiber integration</h2><ul>
+</ul>
+
+<h2 id="fiber_integration">Fiber integration</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+holonomy">higher holonomy</a></p>
 </li>
@@ -681,7 +728,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="application_to_gauge_theory">Application to gauge theory</h2><ul>
+</ul>
+
+<h2 id="application_to_gauge_theory">Application to gauge theory</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gauge+theory">gauge theory</a></p>
 </li>
@@ -719,11 +770,12 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+anomaly">quantum anomaly</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/differential+cohomology+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -898,7 +950,7 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>Since in general <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>λ</mi><mo>=</mo><mfrac><mn>1</mn><mn>2</mn></mfrac><msub><mi>p</mi> <mn>1</mn></msub><mo stretchy="false">(</mo><mi>P</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\lambda = \frac{1}{2}p_1(P)</annotation></semantics></math> is not further divisible in integral cohomology, this means that this cannot be the curvature of any <a class="existingWikiWord" href="/nlab/show/differential+character">differential character</a>/<a class="existingWikiWord" href="/nlab/show/bundle+2-gerbe">bundle 2-gerbe</a>/<a class="existingWikiWord" href="/nlab/show/circle+n-bundle+with+connection">circle 3-bundle with connection</a>, since these are necessarily the images in de Rham cohomology of their integral classes.</p>
 
-<p>See also (<a href="#DFM">DFM, section 12.1</a>) where it is argued that this is related to boundaries and orientation double covers.</p>
+<p>See (<a href="#DFM">DFM 03, section 12.1</a>, <a href="#FSS12">FSS 12</a>)</p>
 
 <h3 id="restriction_to_the_boundary">Restriction to the boundary</h3>
 
@@ -1427,7 +1479,10 @@ margin-left: 0em;
 </ul>
 </li>
 </ul>
-<p><strong>Table of <a class="existingWikiWord" href="/nlab/show/brane">branes</a> appearing in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>/<a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong> (for classification see at <em><a class="existingWikiWord" href="/nlab/show/brane+scan">brane scan</a></em>).</p><table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/brane">brane</a></th><th>in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></th><th><a class="existingWikiWord" href="/nlab/show/charge">charge</a>d under <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a></th><th>has <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> theory</th></tr></thead><tbody><tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/black+brane">black brane</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/higher+gauge+field">higher gauge field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/SCFT">SCFT</a></td></tr>
+<div>
+<p><strong>Table of <a class="existingWikiWord" href="/nlab/show/brane">branes</a> appearing in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>/<a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong> (for classification see at <em><a class="existingWikiWord" href="/nlab/show/brane+scan">brane scan</a></em>).</p>
+
+<table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/brane">brane</a></th><th>in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></th><th><a class="existingWikiWord" href="/nlab/show/charge">charge</a>d under <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a></th><th>has <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> theory</th></tr></thead><tbody><tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/black+brane">black brane</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/higher+gauge+field">higher gauge field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/SCFT">SCFT</a></td></tr>
 <tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/D-brane">D-brane</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/type+II+supergravity">type II</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/RR-field">RR-field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/super+Yang-Mills+theory">super Yang-Mills theory</a></td></tr>
 <tr><td style="text-align: left;"><strong><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_1"><semantics><mrow><mo stretchy="false">(</mo><mi>D</mi><mo>=</mo><mn>2</mn><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(D = 2n)</annotation></semantics></math></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/type+IIA+supergravity">type IIA</a></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_2"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_3"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D0-brane">D0-brane</a></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_4"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_5"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/BFSS+matrix+model">BFSS matrix model</a></td></tr>
@@ -1461,6 +1516,8 @@ margin-left: 0em;
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/self-dual+string">self-dual string</a></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/self-dual+higher+gauge+field">self-dual</a> <a class="existingWikiWord" href="/nlab/show/B-field">B-field</a></td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/3-brane+in+6d">3-brane in 6d</a></td><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
 </tbody></table>
+
+</div>
 <h2 id="References">References</h2>
 
 <p>The state-of-the-art in the literature concerning attempts to find the correct mathematical model for the supergravity C-field seems to be</p>
@@ -1478,7 +1535,7 @@ margin-left: 0em;
 <p>The discussion in <a class="existingWikiWord" href="/nlab/show/twisted+differential+c-structures">twisted nonabelian differential cohomology</a> is given in</p>
 
 <ul id="FiSaSc">
-<li>
+<li id="FSS12">
 <p><a class="existingWikiWord" href="/nlab/show/Domenico+Fiorenza">Domenico Fiorenza</a>, <a class="existingWikiWord" href="/nlab/show/Hisham+Sati">Hisham Sati</a>, <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>,</p>
 
 <p><em><a class="existingWikiWord" href="/schreiber/show/The+moduli+3-stack+of+the+C-field">The moduli 3-stack of the C-field</a></em>,</p>
@@ -1542,14 +1599,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 18, 2018 at 04:42:05.
+  Last revised on December 10, 2018 at 04:06:13.
   See the <a href="https://ncatlab.org/nlab/history/supergravity C-field" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/supergravity+C-field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supergravity+C-field/42" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(42 revisions)</span> | <a href="/nlab/show/diff/supergravity+C-field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supergravity+C-field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/supergravity+C-field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supergravity+C-field/43" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(43 revisions)</span> | <a href="/nlab/show/diff/supergravity+C-field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supergravity+C-field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/supergravity C-field/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
