--- a/pages/3912.html
+++ b/pages/3912.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/1142/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9362/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -321,7 +321,14 @@ margin-left: 0em;
 
 <h4 id="manifolds_and_cobordisms">Manifolds and cobordisms</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/manifolds">manifolds</a></strong> and <strong><a class="existingWikiWord" href="/nlab/show/cobordisms">cobordisms</a></strong></p><p><a class="existingWikiWord" href="/nlab/show/cobordism+theory">cobordism theory</a>, <em><a class="existingWikiWord" href="/nlab/show/Introduction+to+Cobordism+and+Complex+Oriented+Cohomology">Introduction</a></em></p><h2 id="definitions">Definitions</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/manifolds">manifolds</a></strong> and <strong><a class="existingWikiWord" href="/nlab/show/cobordisms">cobordisms</a></strong></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/cobordism+theory">cobordism theory</a>, <em><a class="existingWikiWord" href="/nlab/show/Introduction+to+Cobordism+and+Complex+Oriented+Cohomology">Introduction</a></em></p>
+
+<h2 id="definitions">Definitions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/locally+Euclidean+space">locally Euclidean space</a></p>
 
@@ -435,7 +442,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="genera_and_invariants">Genera and invariants</h2><ul>
+</ul>
+
+<h2 id="genera_and_invariants">Genera and invariants</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/signature+genus">signature genus</a>, <a class="existingWikiWord" href="/nlab/show/Kervaire+invariant">Kervaire invariant</a></p>
 </li>
@@ -443,7 +454,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/A-hat+genus">A-hat genus</a>, <a class="existingWikiWord" href="/nlab/show/Witten+genus">Witten genus</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Whitney+embedding+theorem">Whitney embedding theorem</a></p>
 </li>
@@ -477,15 +492,19 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cobordism+hypothesis">cobordism hypothesis</a>-theorem</p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/manifolds+and+cobordisms+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="cohomology">Cohomology</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></strong></p><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cocycle">cocycle</a>, <a class="existingWikiWord" href="/nlab/show/coboundary">coboundary</a>, <a class="existingWikiWord" href="/nlab/show/coefficient">coefficient</a></p>
 </li>
@@ -533,7 +552,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/obstruction">obstruction</a></p>
 </li>
-</ul><h3 id="special_and_general_types">Special and general types</h3><ul>
+</ul>
+
+<h3 id="special_and_general_types">Special and general types</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cochain+cohomology">cochain cohomology</a></p>
 </li>
@@ -687,7 +710,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Gerstenhaber-Schack+cohomology">bialgebra cohomology</a></p>
 </li>
-</ul><h3 id="special_notions">Special notions</h3><ul>
+</ul>
+
+<h3 id="special_notions">Special notions</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%3Fech+cohomology">?ech cohomology</a></p>
 </li>
@@ -695,7 +722,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/hypercohomology">hypercohomology</a></p>
 </li>
-</ul><h3 id="variants">Variants</h3><ul>
+</ul>
+
+<h3 id="variants">Variants</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a></p>
 
@@ -777,7 +808,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/relative+cohomology">relative cohomology</a></p>
 </li>
-</ul><h3 id="extra_structure">Extra structure</h3><ul>
+</ul>
+
+<h3 id="extra_structure">Extra structure</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Hodge+structure">Hodge structure</a></p>
 </li>
@@ -785,7 +820,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/orientation">orientation</a>, <a class="existingWikiWord" href="/nlab/show/orientation+in+generalized+cohomology">in generalized cohomology</a></p>
 </li>
-</ul><h3 id="operations">Operations</h3><ul>
+</ul>
+
+<h3 id="operations">Operations</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cohomology+operations">cohomology operations</a></p>
 </li>
@@ -805,7 +844,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cohomology+localization">cohomology localization</a></p>
 </li>
-</ul><h3 id="theorems">Theorems</h3><ul>
+</ul>
+
+<h3 id="theorems">Theorems</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/universal+coefficient+theorem">universal coefficient theorem</a></p>
 </li>
@@ -835,11 +878,12 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Eckmann-Hilton+duality">Eckmann-Hilton-Fuks duality</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/cohomology+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -1113,7 +1157,7 @@ margin-left: 0em;
 
 <ul>
 <li id="Kochmann96">
-<p><a class="existingWikiWord" href="/nlab/show/Stanley+Kochmann">Stanley Kochmann</a>, section 2.6 of <em><a class="existingWikiWord" href="/nlab/show/Bordism%2C+Stable+Homotopy+and+Adams+Spectral+Sequences">Bordism, Stable Homotopy and Adams Spectral Sequences</a></em>, AMS 1996</p>
+<p><a class="existingWikiWord" href="/nlab/show/Stanley+Kochman">Stanley Kochman</a>, section 2.6 of <em><a class="existingWikiWord" href="/nlab/show/Bordism%2C+Stable+Homotopy+and+Adams+Spectral+Sequences">Bordism, Stable Homotopy and Adams Spectral Sequences</a></em>, AMS 1996</p>
 </li>
 
 <li id="Rudyak98">
@@ -1190,14 +1234,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 26, 2018 at 04:51:13.
+  Last revised on December 10, 2018 at 05:01:36.
   See the <a href="https://ncatlab.org/nlab/history/Thom isomorphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Thom+isomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Thom+isomorphism/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/Thom+isomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Thom+isomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Thom+isomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Thom+isomorphism/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/Thom+isomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Thom+isomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Thom isomorphism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
