--- a/pages/3912.html
+++ b/pages/3912.html
@@ -918,7 +918,7 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
-<p>from the <a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> to the <a class="existingWikiWord" href="/nlab/show/reduced+cohomology">reduced cohomology</a> of the <a class="existingWikiWord" href="/nlab/show/Thom+space">Thom space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Th</mi><mo stretchy="false">(</mo><mi>V</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Th(V)</annotation></semantics></math>, given by pullback to the <a class="existingWikiWord" href="/nlab/show/Thom+space">Thom space</a> followed by <a class="existingWikiWord" href="/nlab/show/cup+product">cup product</a> with a <a class="existingWikiWord" href="/nlab/show/Thom+class">Thom class</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>c</mi><mo>∈</mo><msup><mi>H</mi> <mi>n</mi></msup><mo stretchy="false">(</mo><mi>Th</mi><mo stretchy="false">(</mo><mi>V</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">c \in H^n(Th(V))</annotation></semantics></math>. That this is indeed an <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a> follows via the <a class="existingWikiWord" href="/nlab/show/Leray-Hirsch+theorem">Leray-Hirsch theorem</a> (see e.g. <a href="#Ebert12">Ebert 12, 2.3,2.4</a>) or from running a <a class="existingWikiWord" href="/nlab/show/Serre+spectral+sequence">Serre spectral sequence</a> (e.g. <a href="#Kochmann96">Kochmann 96, section 2.6</a>).</p>
+<p>from the <a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> to the <a class="existingWikiWord" href="/nlab/show/reduced+cohomology">reduced cohomology</a> of the <a class="existingWikiWord" href="/nlab/show/Thom+space">Thom space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Th</mi><mo stretchy="false">(</mo><mi>V</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Th(V)</annotation></semantics></math>, given by pullback to the <a class="existingWikiWord" href="/nlab/show/Thom+space">Thom space</a> followed by <a class="existingWikiWord" href="/nlab/show/cup+product">cup product</a> with a <a class="existingWikiWord" href="/nlab/show/Thom+class">Thom class</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>c</mi><mo>∈</mo><msup><mi>H</mi> <mi>n</mi></msup><mo stretchy="false">(</mo><mi>Th</mi><mo stretchy="false">(</mo><mi>V</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">c \in H^n(Th(V))</annotation></semantics></math>. That this is indeed an <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a> follows via the <a class="existingWikiWord" href="/nlab/show/Leray-Hirsch+theorem">Leray-Hirsch theorem</a> (see e.g. <a href="#Ebert12">Ebert 12, 2.3,2.4</a>) or from running a <a class="existingWikiWord" href="/nlab/show/Serre+spectral+sequence">Serre spectral sequence</a> (e.g. <a href="#Kochman96">Kochman 96, section 2.6</a>).</p>
 
 <p>In the special case that the vector bundle is trivial of rank <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>, then its <a class="existingWikiWord" href="/nlab/show/Thom+space">Thom space</a> coincides with the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-fold <a class="existingWikiWord" href="/nlab/show/suspension">suspension</a> of the base space (<a href="Thom+space#ThomSpaceConstructionReducingToSuspension">exmpl.</a>) and the Thom isomorphism coincides with the <a class="existingWikiWord" href="/nlab/show/suspension+isomorphism">suspension isomorphism</a>. In this sense the Thom isomorphism may be regarded as a <em>twisted suspension isomorphism</em>.</p>
 
@@ -931,7 +931,7 @@ margin-left: 0em;
   \tilde E^{\bullet + n}(Th(V))
 
 </annotation></semantics></math></div>
-<p>(e.g. <a href="#Rudyak98">Rudyak 98, chapter V, 1.3</a>, <a href="#Kochmann96">Kochmann 96, prop. 4.3.6</a>)</p>
+<p>(e.g. <a href="#Rudyak98">Rudyak 98, chapter V, 1.3</a>, <a href="#Kochman96">Kochman 96, prop. 4.3.6</a>)</p>
 
 <p>One may think of the Thom isomorphism from left to right as <a class="existingWikiWord" href="/nlab/show/cup+product">cupping</a> with a generalized <a class="existingWikiWord" href="/nlab/show/volume+form">volume form</a> on the fibers, and from right to left as performing <a class="existingWikiWord" href="/nlab/show/fiber+integration">fiber integration</a> against this volume form.</p>
 
@@ -1156,7 +1156,7 @@ margin-left: 0em;
 <p>Textbook accounts include</p>
 
 <ul>
-<li id="Kochmann96">
+<li id="Kochman96">
 <p><a class="existingWikiWord" href="/nlab/show/Stanley+Kochman">Stanley Kochman</a>, section 2.6 of <em><a class="existingWikiWord" href="/nlab/show/Bordism%2C+Stable+Homotopy+and+Adams+Spectral+Sequences">Bordism, Stable Homotopy and Adams Spectral Sequences</a></em>, AMS 1996</p>
 </li>
 
@@ -1234,14 +1234,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 10, 2018 at 05:01:36.
+  Last revised on December 10, 2018 at 06:49:18.
   See the <a href="https://ncatlab.org/nlab/history/Thom isomorphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Thom+isomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Thom+isomorphism/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/Thom+isomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Thom+isomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Thom+isomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Thom+isomorphism/34" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(34 revisions)</span> | <a href="/nlab/show/diff/Thom+isomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Thom+isomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Thom isomorphism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
