--- a/pages/1437.html
+++ b/pages/1437.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9364/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,15 @@ margin-left: 0em;
 
 <h4 id="algebra">Algebra</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></strong></p><p><a class="existingWikiWord" href="/nlab/show/universal+algebra">universal algebra</a></p><h2 id="algebraic_theories">Algebraic theories</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></strong></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/universal+algebra">universal algebra</a></p>
+
+<h2 id="algebraic_theories">Algebraic theories</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebraic+theory">algebraic theory</a> / <a class="existingWikiWord" href="/nlab/show/2-algebraic+theory">2-algebraic theory</a> / <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-algebraic+theory">(∞,1)-algebraic theory</a></p>
 </li>
@@ -329,7 +337,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/operad">operad</a> / <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-operad">(∞,1)-operad</a></p>
 </li>
-</ul><h2 id="algebras_and_modules">Algebras and modules</h2><ul>
+</ul>
+
+<h2 id="algebras_and_modules">Algebras and modules</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebra+over+a+monad">algebra over a monad</a></p>
 
@@ -363,7 +375,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/associated+bundle">associated bundle</a>, <a class="existingWikiWord" href="/nlab/show/associated+%E2%88%9E-bundle">associated ∞-bundle</a></p>
 </li>
-</ul><h2 id="higher_algebras">Higher algebras</h2><ul>
+</ul>
+
+<h2 id="higher_algebras">Higher algebras</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+%28%E2%88%9E%2C1%29-category">monoidal (∞,1)-category</a></p>
 
@@ -433,7 +449,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/deformation+theory">deformation theory</a></li>
 </ul>
 </li>
-</ul><h2 id="model_category_presentations">Model category presentations</h2><ul>
+</ul>
+
+<h2 id="model_category_presentations">Model category presentations</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/model+structure+on+simplicial+T-algebras">model structure on simplicial T-algebras</a> / <a class="existingWikiWord" href="/nlab/show/homotopy+T-algebra">homotopy T-algebra</a></p>
 </li>
@@ -443,7 +463,11 @@ margin-left: 0em;
 
 <p><a class="existingWikiWord" href="/nlab/show/model+structure+on+algebras+over+an+operad">model structure on algebras over an operad</a></p>
 </li>
-</ul><h2 id="geometry_on_formal_duals_of_algebras">Geometry on formal duals of algebras</h2><ul>
+</ul>
+
+<h2 id="geometry_on_formal_duals_of_algebras">Geometry on formal duals of algebras</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Isbell+duality">Isbell duality</a></p>
 </li>
@@ -451,7 +475,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Deligne+conjecture">Deligne conjecture</a></p>
 </li>
@@ -463,23 +491,34 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+Dold-Kan+correspondence">monoidal Dold-Kan correspondence</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p><a href="/nlab/edit/higher+algebra+-+contents">Edit this sidebar</a></p>
-</div></div>
+</div></div></div>
 
 <h4 id="induction">Induction</h4>
 
-<div class="hide"><ul>
+<div class="hide"><div>
+
+<ul>
 <li><strong><a class="existingWikiWord" href="/nlab/show/inductive+type">inductive type</a></strong></li>
 
 <li><strong><a class="existingWikiWord" href="/nlab/show/higher+inductive+type">higher inductive type</a></strong></li>
 
 <li><strong><a class="existingWikiWord" href="/nlab/show/coinductive+type">coinductive type</a></strong></li>
-</ul><h2 id="rules">Rules</h2><ul>
+</ul>
+
+<h2 id="rules">Rules</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/induction">induction</a>, <a class="existingWikiWord" href="/nlab/show/coinduction">coinduction</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/recursion">recursion</a>, <a class="existingWikiWord" href="/nlab/show/corecursion">corecursion</a></li>
-</ul><h2 id="categorical_semantics">Categorical semantics</h2><ul>
+</ul>
+
+<h2 id="categorical_semantics">Categorical semantics</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/initial+algebra+of+an+endofunctor">initial algebra of an endofunctor</a>, <a class="existingWikiWord" href="/nlab/show/terminal+coalgebra+of+an+endofunctor">terminal coalgebra of an endofunctor</a></p>
 </li>
@@ -487,7 +526,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/initial+algebra+of+a+presentable+%E2%88%9E-monad">initial algebra of a presentable ∞-monad</a></p>
 </li>
-</ul><h2 id="examples">Examples</h2><ul>
+</ul>
+
+<h2 id="examples">Examples</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/natural+numbers+object">natural numbers object</a>, <a class="existingWikiWord" href="/nlab/show/list">list</a>,</p>
 </li>
@@ -499,11 +542,12 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/W-type">W-type</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/induction+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -715,14 +759,14 @@ F L &amp; \underset{\theta^{-1}}{\to} &amp; L
 
 <div class="revisedby">
   <p>
-  Last revised on October 14, 2018 at 15:28:41.
+  Last revised on December 10, 2018 at 09:54:20.
   See the <a href="https://ncatlab.org/nlab/history/terminal coalgebra for an endofunctor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/terminal+coalgebra+for+an+endofunctor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/terminal+coalgebra+for+an+endofunctor/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/terminal+coalgebra+for+an+endofunctor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/terminal+coalgebra+for+an+endofunctor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/terminal+coalgebra+for+an+endofunctor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/terminal+coalgebra+for+an+endofunctor/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/terminal+coalgebra+for+an+endofunctor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/terminal+coalgebra+for+an+endofunctor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/terminal coalgebra for an endofunctor/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
