--- a/pages/16534.html
+++ b/pages/16534.html
@@ -317,7 +317,8 @@ margin-left: 0em;
 
 <h4 id="string_theory">String theory</h4>
 
-<div class="hide"><ul>
+<div class="hide"><div>
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong></p>
 </li>
@@ -325,7 +326,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+about+string+theory">books about string theory</a></p>
 </li>
-</ul><h3 id="ingredients">Ingredients</h3><ul>
+</ul>
+
+<h3 id="ingredients">Ingredients</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a></p>
 </li>
@@ -345,7 +350,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>, <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>, <a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a></li>
 </ul>
 </li>
-</ul><h3 id="critical_string_models">Critical string models</h3><ul>
+</ul>
+
+<h3 id="critical_string_models">Critical string models</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/heterotic+string+theory">heterotic string theory</a></p>
 
@@ -425,7 +434,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Ho%C5%99ava-Witten+theory">Hořava-Witten theory</a></li>
 </ul>
 </li>
-</ul><h3 id="extended_objects">Extended objects</h3><ul>
+</ul>
+
+<h3 id="extended_objects">Extended objects</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/brane">brane</a></p>
 </li>
@@ -509,7 +522,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h3 id="topological_strings">Topological strings</h3><ul>
+</ul>
+
+<h3 id="topological_strings">Topological strings</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+string">topological string</a>, <a class="existingWikiWord" href="/nlab/show/TCFT">TCFT</a></p>
 
@@ -521,7 +538,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+M-theory">topological M-theory</a></p>
 </li>
-</ul><h2 id="backgrounds">Backgrounds</h2><ul>
+</ul>
+
+<h2 id="backgrounds">Backgrounds</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/target+space">target space</a>, <a class="existingWikiWord" href="/nlab/show/background+gauge+field">background gauge field</a></p>
 </li>
@@ -533,7 +554,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/landscape+of+string+theory+vacua">landscape of string theory vacua</a></p>
 </li>
-</ul><h2 id="phenomenology">Phenomenology</h2><ul>
+</ul>
+
+<h2 id="phenomenology">Phenomenology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a></p>
 
@@ -547,16 +572,31 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/string+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#examples">Examples</a><ul><li><a href="#12_m5brane">1/2 M5-brane</a></li><li><a href="#estring">E-String</a></li><li><a href="#string_network">String network</a></li><li><a href="#membrane_triple_junction">Membrane triple junction</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#examples'>Examples</a></li>
+<ul>
+<li><a href='#12_m5brane'>1/2 M5-brane</a></li>
+<li><a href='#estring'>E-String</a></li>
+<li><a href='#string_network'>String network</a></li>
+<li><a href='#membrane_triple_junction'>Membrane triple junction</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p><a class="existingWikiWord" href="/nlab/show/intersection">intersection</a> of <a class="existingWikiWord" href="/nlab/show/branes">branes</a> in <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></p>
@@ -626,6 +666,10 @@ margin-left: 0em;
 <li id="Townsend97">
 <p><a class="existingWikiWord" href="/nlab/show/Paul+Townsend">Paul Townsend</a>, section 4 of <em>M-theory from its superalgebra</em> (<a href="http://arxiv.org/abs/hep-th/9712004">arXiv:hep-th/9712004</a>)</p>
 </li>
+
+<li>
+<p>Sergey A. Cherkis, <em>Supergravity Solution for M5-brane Intersection</em> (<a href="https://arxiv.org/abs/hep-th/9906203">arXiv:hep-th/9906203</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -633,14 +677,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 08:40:33.
+  Last revised on December 11, 2018 at 00:36:35.
   See the <a href="https://ncatlab.org/nlab/history/brane intersection" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/brane+intersection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/brane+intersection/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/brane+intersection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/brane+intersection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/brane+intersection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/brane+intersection/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/brane+intersection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/brane+intersection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/brane intersection/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
