--- a/pages/1593.html
+++ b/pages/1593.html
@@ -317,7 +317,8 @@ margin-left: 0em;
 
 <h4 id="string_theory">String theory</h4>
 
-<div class="hide"><ul>
+<div class="hide"><div>
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong></p>
 </li>
@@ -325,7 +326,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+about+string+theory">books about string theory</a></p>
 </li>
-</ul><h3 id="ingredients">Ingredients</h3><ul>
+</ul>
+
+<h3 id="ingredients">Ingredients</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a></p>
 </li>
@@ -345,7 +350,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>, <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>, <a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a></li>
 </ul>
 </li>
-</ul><h3 id="critical_string_models">Critical string models</h3><ul>
+</ul>
+
+<h3 id="critical_string_models">Critical string models</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/heterotic+string+theory">heterotic string theory</a></p>
 
@@ -425,7 +434,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Ho%C5%99ava-Witten+theory">Hořava-Witten theory</a></li>
 </ul>
 </li>
-</ul><h3 id="extended_objects">Extended objects</h3><ul>
+</ul>
+
+<h3 id="extended_objects">Extended objects</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/brane">brane</a></p>
 </li>
@@ -509,7 +522,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h3 id="topological_strings">Topological strings</h3><ul>
+</ul>
+
+<h3 id="topological_strings">Topological strings</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+string">topological string</a>, <a class="existingWikiWord" href="/nlab/show/TCFT">TCFT</a></p>
 
@@ -521,7 +538,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+M-theory">topological M-theory</a></p>
 </li>
-</ul><h2 id="backgrounds">Backgrounds</h2><ul>
+</ul>
+
+<h2 id="backgrounds">Backgrounds</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/target+space">target space</a>, <a class="existingWikiWord" href="/nlab/show/background+gauge+field">background gauge field</a></p>
 </li>
@@ -533,7 +554,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/landscape+of+string+theory+vacua">landscape of string theory vacua</a></p>
 </li>
-</ul><h2 id="phenomenology">Phenomenology</h2><ul>
+</ul>
+
+<h2 id="phenomenology">Phenomenology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a></p>
 
@@ -547,15 +572,21 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/string+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="differential_cohomology">Differential cohomology</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/differential+cohomology">differential cohomology</a></strong></p><h2 id="ingredients">Ingredients</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/differential+cohomology">differential cohomology</a></strong></p>
+
+<h2 id="ingredients">Ingredients</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></p>
 </li>
@@ -563,7 +594,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/differential+geometry">differential geometry</a></p>
 </li>
-</ul><h2 id="connections_on_bundles">Connections on bundles</h2><ul>
+</ul>
+
+<h2 id="connections_on_bundles">Connections on bundles</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/connection+on+a+bundle">connection on a bundle</a></p>
 
@@ -597,7 +632,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="higher_abelian_differential_cohomology">Higher abelian differential cohomology</h2><ul>
+</ul>
+
+<h2 id="higher_abelian_differential_cohomology">Higher abelian differential cohomology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/differential+function+complex">differential function complex</a></p>
 </li>
@@ -643,7 +682,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/differential+cobordism+cohomology">differential cobordism cohomology</a></p>
 </li>
-</ul><h2 id="higher_nonabelian_differential_cohomology">Higher nonabelian differential cohomology</h2><ul>
+</ul>
+
+<h2 id="higher_nonabelian_differential_cohomology">Higher nonabelian differential cohomology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/principal+2-bundle">principal 2-bundle</a>, <a class="existingWikiWord" href="/nlab/show/principal+%E2%88%9E-bundle">principal ∞-bundle</a></p>
 </li>
@@ -663,7 +706,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-Chern-Simons+theory">∞-Chern-Simons theory</a></p>
 </li>
-</ul><h2 id="fiber_integration">Fiber integration</h2><ul>
+</ul>
+
+<h2 id="fiber_integration">Fiber integration</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+holonomy">higher holonomy</a></p>
 </li>
@@ -681,7 +728,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="application_to_gauge_theory">Application to gauge theory</h2><ul>
+</ul>
+
+<h2 id="application_to_gauge_theory">Application to gauge theory</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gauge+theory">gauge theory</a></p>
 </li>
@@ -719,11 +770,12 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+anomaly">quantum anomaly</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/differential+cohomology+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -830,7 +882,7 @@ margin-left: 0em;
 </li>
 
 <li id="HananyKol00">
-<p><a class="existingWikiWord" href="/nlab/show/Amihay+Hanany">Amihay Hanany</a>, Barak Kol, section 4 of <em>On Orientifolds, Discrete Torsion, Branes and M Theory</em>, JHEP 0006 (2000) 013 (<a href="https://arxiv.org/abs/hep-th/0003025">arXiv:hep-th/0003025</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Amihay+Hanany">Amihay Hanany</a>, <a class="existingWikiWord" href="/nlab/show/Barak+Kol">Barak Kol</a>, section 4 of <em>On Orientifolds, Discrete Torsion, Branes and M Theory</em>, JHEP 0006 (2000) 013 (<a href="https://arxiv.org/abs/hep-th/0003025">arXiv:hep-th/0003025</a>)</p>
 </li>
 </ul>
 
@@ -949,14 +1001,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 11, 2018 at 07:06:39.
+  Last revised on December 11, 2018 at 01:26:31.
   See the <a href="https://ncatlab.org/nlab/history/orientifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orientifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold/44" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(44 revisions)</span> | <a href="/nlab/show/diff/orientifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orientifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold/45" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(45 revisions)</span> | <a href="/nlab/show/diff/orientifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orientifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
