--- a/pages/16924.html
+++ b/pages/16924.html
@@ -1667,7 +1667,13 @@ margin-left: 0em;
 <h2 id="related_entries">Related entries</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/brane+intersection">brane intersection</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%28p%2Cq%29-string">(p,q)-string</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/brane+intersection">brane intersection</a>, <a class="existingWikiWord" href="/nlab/show/brane+web">brane web</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -1681,14 +1687,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 11, 2018 at 01:24:57.
+  Last revised on December 11, 2018 at 02:30:00.
   See the <a href="https://ncatlab.org/nlab/history/(p,q)5-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/%28p%2Cq%295-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%28p%2Cq%295-brane/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/%28p%2Cq%295-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%28p%2Cq%295-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/%28p%2Cq%295-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%28p%2Cq%295-brane/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/%28p%2Cq%295-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%28p%2Cq%295-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/(p,q)5-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
